[gd_scene load_steps=25 format=2]

[ext_resource path="res://Sprites/body.png" type="Texture" id=1]
[ext_resource path="res://Sprites/fondo.jpg" type="Texture" id=12]
[ext_resource path="res://body.gd" type="Script" id=24]
[ext_resource path="res://Sound/alarm.ogg" type="AudioStream" id=25]
[ext_resource path="res://Sprites/light.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Lights/tooth.gd" type="Script" id=27]
[ext_resource path="res://Sprites/Lights/eyes.gd" type="Script" id=28]
[ext_resource path="res://Sprites/Lights/heart.gd" type="Script" id=29]
[ext_resource path="res://Sprites/Lights/intestine.gd" type="Script" id=30]
[ext_resource path="res://Sprites/Lights/thyroid.gd" type="Script" id=31]
[ext_resource path="res://Sprites/Lights/head.gd" type="Script" id=32]
[ext_resource path="res://Sprites/Lights/skin.gd" type="Script" id=33]
[ext_resource path="res://Level3.tscn" type="PackedScene" id=34]
[ext_resource path="res://Level2.tscn" type="PackedScene" id=35]
[ext_resource path="res://Level4.tscn" type="PackedScene" id=36]
[ext_resource path="res://HUD_game.tscn" type="PackedScene" id=37]
[ext_resource path="res://Level1.tscn" type="PackedScene" id=41]

[sub_resource type="Animation" id=1]
resource_name = "eyes"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("eyes:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.7 ]
}

[sub_resource type="Animation" id=2]
resource_name = "head"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("head:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "heart"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("heart:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.7 ]
}

[sub_resource type="Animation" id=4]
resource_name = "intestine"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("intestine:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.7 ]
}

[sub_resource type="Animation" id=5]
resource_name = "skin"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("skin:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.7 ]
}

[sub_resource type="Animation" id=6]
resource_name = "thyroid"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("thyroid:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.7 ]
}

[sub_resource type="Animation" id=7]
resource_name = "tooth"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("tooth:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.7 ]
}

[node name="Area2D" type="Area2D"]
position = Vector2( 227.684, 327.922 )
script = ExtResource( 24 )
Scene1 = ExtResource( 41 )
Scene2 = ExtResource( 35 )
Scene3 = ExtResource( 34 )
Scene4 = ExtResource( 36 )

[node name="fondo" type="TextureRect" parent="."]
margin_left = -280.406
margin_top = -352.126
margin_right = 1319.6
margin_bottom = 547.874
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="body" type="Sprite" parent="."]
position = Vector2( 11.0297, 78.494 )
scale = Vector2( 1.63107, 1.62625 )
texture = ExtResource( 1 )

[node name="eyes" type="Light2D" parent="body"]
visible = false
position = Vector2( 6.09204, -198.739 )
scale = Vector2( 0.184452, 0.0624848 )
enabled = false
texture = ExtResource( 26 )
color = Color( 1, 0, 0, 1 )
mode = 2
script = ExtResource( 28 )

[node name="tooth" type="Light2D" parent="body"]
visible = false
position = Vector2( 5.69983, -181.105 )
scale = Vector2( 0.114761, 0.0576057 )
enabled = false
texture = ExtResource( 26 )
color = Color( 1, 0, 0, 1 )
energy = 0.7
mode = 2
script = ExtResource( 27 )

[node name="head" type="Light2D" parent="body"]
visible = false
position = Vector2( 6.29352, -220.767 )
scale = Vector2( 0.145558, 0.108259 )
texture = ExtResource( 26 )
color = Color( 1, 0, 0, 1 )
mode = 2
script = ExtResource( 32 )

[node name="heart" type="Light2D" parent="body"]
visible = false
position = Vector2( 16.6992, -123.107 )
scale = Vector2( 0.108585, 0.10836 )
enabled = false
texture = ExtResource( 26 )
color = Color( 1, 0, 0, 1 )
energy = 0.820489
mode = 2
script = ExtResource( 29 )

[node name="intestine" type="Light2D" parent="body"]
visible = false
position = Vector2( 10.3896, 47.0288 )
scale = Vector2( 0.375572, 0.284655 )
enabled = false
texture = ExtResource( 26 )
color = Color( 1, 0, 0, 1 )
energy = 0.7
mode = 2
script = ExtResource( 30 )

[node name="skin" type="Light2D" parent="body"]
visible = false
position = Vector2( -20.5459, 198.809 )
scale = Vector2( 0.119901, 0.260677 )
enabled = false
texture = ExtResource( 26 )
color = Color( 1, 0, 0, 1 )
energy = 0.7
mode = 2
script = ExtResource( 33 )

[node name="thyroid" type="Light2D" parent="body"]
visible = false
position = Vector2( 11.7462, -181.958 )
scale = Vector2( 0.185164, 0.099929 )
enabled = false
texture = ExtResource( 26 )
color = Color( 1, 0, 0, 1 )
energy = 0.7
mode = 2
script = ExtResource( 31 )

[node name="timer_light" type="Timer" parent="body"]
wait_time = 0.1
autostart = true

[node name="light_animation" type="AnimationPlayer" parent="body"]
autoplay = "eyes"
anims/eyes = SubResource( 1 )
anims/head = SubResource( 2 )
anims/heart = SubResource( 3 )
anims/intestine = SubResource( 4 )
anims/skin = SubResource( 5 )
anims/thyroid = SubResource( 6 )
anims/tooth = SubResource( 7 )

[node name="button_zone" type="Button" parent="."]
visible = false
margin_left = -12.0
margin_top = -303.0
margin_right = 56.0
margin_bottom = -257.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="alarm" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource( 25 )
volume_db = -5.0

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="HUD_game" parent="." instance=ExtResource( 37 )]
[connection signal="hide_HUD" from="." to="HUD_game" method="hide_HUD"]
[connection signal="iniciar_juego_zona0" from="." to="." method="juego_zona0"]
[connection signal="iniciar_juego_zona1" from="." to="." method="juego_zona1"]
[connection signal="iniciar_juego_zona2" from="." to="." method="juego_zona2"]
[connection signal="iniciar_juego_zona3" from="." to="." method="juego_zona3"]
[connection signal="start_HUD0" from="." to="HUD_game" method="_on_Area2D_start_HUD0"]
[connection signal="pressed" from="button_zone" to="." method="_on_Button_pressed"]
